kqed_dev4/src/objects/WGBH_PB5_UPLOAD__c.object
<CustomObject>
    <fields>
        <fullName>PB5_TITLE_2__c</fullName>
        <description>Title of the second name in the file</description>
        <label>PB5_TITLE_2</label>
        <picklist>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TITLE__c</fullName>
        <description>Maps to: UL_NAMES.TITLE</description>
        <label>PB5_TITLE</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sergeant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TRANSACTION_TYPE__c</fullName>
        <label>PB5_TRANSACTION_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>PLEDGE WITH PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE NO PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLKIMBIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_UPLOAD_FILENAME__c</fullName>
        <description>The name of the file that was processed to upload this record</description>
        <label>PB5_UPLOAD_FILENAME</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_UPLOAD_SOURCE__c</fullName>
        <label>PB5_UPLOAD_SOURCE</label>
        <picklist>
            <picklistValues>
                <fullName>ACD_PLEDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD_TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOCKBOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ZIP_CODE__c</fullName>
        <description>zip code of preferred address. Maps to: UL_ADDRESSES.ZIP_CODE</description>
        <label>PB5_ZIP_CODE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ZIP_EXTENSION__c</fullName>
        <description>zip extension of preferred address</description>
        <label>PB5_ZIP_EXTENSION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Duplicate_ID__c</fullName>
        <label>SF Duplicate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PB5_UPLOAD</label>
    <listViews>
        <fullName>ACD_PLEDGE</fullName>
        <columns>NAME</columns>
        <columns>PB5_SOURCE__c</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_PAYMENT_METHOD__c</columns>
        <columns>PB5_PAYMENTS_IN_SCHEDULE__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PB5_UPLOAD_SOURCE__c</field>
            <operation>equals</operation>
            <value>ACD_PLEDGE</value>
        </filters>
        <label>ACD_PLEDGE</label>
    </listViews>
    <listViews>
        <fullName>ACD_TM</fullName>
        <columns>NAME</columns>
        <columns>PB5_UPLOAD_SOURCE__c</columns>
        <columns>PB5_SFDC_ID__c</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_PLEDGE_NUMBER__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_PAYMENT_METHOD__c</columns>
        <columns>PB5_PAYMENTS_IN_SCHEDULE__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PB5_UPLOAD_SOURCE__c</field>
            <operation>equals</operation>
            <value>ACD_TM</value>
        </filters>
        <label>ACD_TM</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>PB5_UPLOAD_SOURCE__c</columns>
        <columns>PB5_SOURCE__c</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <columns>PB5_PLEDGE_NUMBER__c</columns>
        <columns>PB5_STREET_1__c</columns>
        <columns>PB5_CITY__c</columns>
        <columns>PB5_STATE__c</columns>
        <columns>PB5_ZIP_CODE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>PB5_SFDC_ID__c</columns>
        <columns>PB5_UPLOAD_SOURCE__c</columns>
        <columns>PB5_SOURCE__c</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_PAYMENT_METHOD__c</columns>
        <columns>PB5_PAYMENTS_IN_SCHEDULE__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <columns>PB5_PLEDGE_NUMBER__c</columns>
        <columns>PB5_GIFT_KIND__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Flag_for_Review__c</columns>
        <columns>Flag_Review_Reason__c</columns>
        <columns>IS_DUPLICATE__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_ARIA__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_AUCTION__c</columns>
        <columns>PB5_PLEDGE_NUMBER__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_CARS__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_FDNDEV__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_LOCKBOX__c</columns>
        <columns>PB5_ALT_ACCOUNT_ID_PBSD__c</columns>
        <columns>PB5_REQUIRES_REVIEW__c</columns>
        <columns>PB5_SFDC_ID__c</columns>
        <columns>PB5_TRANSACTION_TYPE__c</columns>
        <columns>PB5_UPLOAD_FILENAME__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Convio</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_FIRST_NAME_2__c</columns>
        <columns>PB5_LAST_NAME_2__c</columns>
        <columns>PB5_IS_NEW__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_Additional_Amount__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <columns>PB5_START_CDATE_1__c</columns>
        <columns>PB5_TELEPHONE_NUMBER_1__c</columns>
        <columns>PB5_TRANSACTION_TYPE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WGBH_PB5_UPLOAD__c.Convio</value>
        </filters>
        <label>Convio</label>
    </listViews>
    <listViews>
        <fullName>Flagged_for_Review</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_for_Review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Flagged for Review</label>
    </listViews>
    <nameField>
        <displayFormat>PB5-{0000}</displayFormat>
        <label>PB5_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PB5_UPLOADS</pluralLabel>
    <recordTypes>
        <fullName>ACD_Pledge</fullName>
        <active>true</active>
        <description>Record Type for Pledges that arrive through ACD Pledge activities</description>
        <label>ACD Pledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACD_Telemarketing</fullName>
        <active>true</active>
        <description>Recrod Type for ACD Telemarketing activities</description>
        <label>ACD Telemarketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aria</fullName>
        <active>true</active>
        <description>Payment info from Aria Telemarketing initiatives</description>
        <label>Aria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auction</fullName>
        <active>true</active>
        <description>Record Type for auction gift and payment data</description>
        <label>Auction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cars</fullName>
        <active>true</active>
        <description>Record type for cars donation</description>
        <label>Cars</label>
    </recordTypes>
    <recordTypes>
        <fullName>Convio</fullName>
        <active>true</active>
        <description>Record type for Convio online pledge and payment information</description>
        <label>Convio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kimbia</fullName>
        <active>true</active>
        <description>Record Type for payment and sales info from Kimbia</description>
        <label>Kimbia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lockbox</fullName>
        <active>true</active>
        <description>Record type for Lockbox pledge and payment data</description>
        <label>Lockbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBSD</fullName>
        <active>true</active>
        <description>Record Type for payment and sales info from PBSd</description>
        <label>PBSD</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>